Unreleased
- Added clock widget for current time and date

v1.3 (2022-1-13)
- Added hotkeys feature
- Removed EscQuit setting. Esc to quit functionality is now implemented as a configurable hotkey
- Changed slideshow time units from milliseconds to seconds
- Windows: Applications now launch via WIN32 API instead of the standard C runtime
- Windows: Implemented OnLaunch setting that was previously Linux exclusive
- Windows: Fixed web browser non-blocking issue
- Linux: Improved Wayland support

v1.2 (2022-1-2)
- Added slideshow background mode
- Added screensaver feature
- Windows: Improved Unicode support

v1.1 (2021-12-24)
- Added logging interface
- Linux: Added OnLaunch setting
- Changed all RGBA color settings to RGB for simplicity. Transparency is now set solely in the separate opacity setting
- Refactored automatic file searching logic

v1.0.1 (2021-12-4)
- Added support for WebP images
- Improved handling of paths enclosed in quotes
- Windows: Added application icon to executable

v1.0 (2021-11-28)
- Initial release