@@ -5,6 +5,7 @@
 static void convert_utf8_string(LPWSTR w_string, const char *string, int buffer_size);
 static void convert_utf16_string(char *string, LPCWSTR w_string, int buffer_size);
 static void convert_utf8_alloc(LPWSTR *buffer, const char *string);
+static void convert_utf16_alloc(const char **buffer, LPCWSTR w_string);
 static void parse_command(char *cmd, LPWSTR w_file, LPWSTR *w_params);
 static LPWSTR path_basename(LPCWSTR w_path);
 static bool process_running_name(LPCWSTR w_target_process);
